# DALM-DETR

./: .gitignore  README.md  pyproject.toml  requirements.txt
demo/: DEPLOY.md  app.py  requirements.txt
outputs/audit/: leakage_audit_citypersons.json  leakage_audit_widerperson.json
outputs/eval_final/logs/: stratified_final.json  stratified_final.txt
scripts/: eval_ood.py  eval_stratified.py  train.py
src/offsetiou_det/data/: coco_person.py  crowdhuman.py
src/offsetiou_det/engine/: evaluator.py  trainer.py
src/offsetiou_det/evaluation/: crowd_metrics.py  density_analysis.py
src/offsetiou_det/losses/: box_ops.py  criterion.py
src/offsetiou_det/matching/: hungarian.py  offset_cost.py
src/offsetiou_det/models/: backbone.py  deformable.py  detector.py  transformer.py
src/offsetiou_det/utils/: seed.py
tests/: test_matching.py  test_offset_cost.py
tools/: audit_ood_leakage.py  download_crowdhuman.py  download_roboflow_dataset.py  visualize_comparison.py
